--- a/src/assets/css/landingPage.css
+++ b/src/assets/css/landingPage.css
@@ -1,3 +1,7 @@
 .bg-gradient{
   background-image: url('../svg/landing-page/bg-gradient.svg');
 }
+
+.bg-pattern{
+  background-image: url('../svg/landing-page/pattern.svg');
+}
