--- a/src/assets/css/landingPage.css
+++ b/src/assets/css/landingPage.css
@@ -1,7 +1,78 @@
+#root{
+  overflow-x: hidden;
+}
+
 .bg-gradient{
   background-image: url('../svg/landing-page/bg-gradient.svg');
 }
 
 .bg-pattern{
   background-image: url('../svg/landing-page/pattern.svg');
+}
+
+#nav-icon {
+	width: 30px;
+	height: 10px;
+	position: relative;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: 0.5s ease-in-out;
+	-moz-transition: 0.5s ease-in-out;
+	-o-transition: 0.5s ease-in-out;
+	transition: 0.5s ease-in-out;
+	cursor: pointer;
+}
+
+#nav-icon span {
+	display: block;
+	position: absolute;
+	height: 1.9px;
+	width: 100%;
+	background: #0E5458;
+	border-radius: 9px;
+	opacity: 1;
+	left: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: 0.25s ease-in-out;
+	-moz-transition: 0.25s ease-in-out;
+	-o-transition: 0.25s ease-in-out;
+	transition: 0.25s ease-in-out;
+}
+
+#nav-icon span:nth-child(1) {
+	top: 0px;
+}
+
+#nav-icon span:nth-child(2) {
+	top: 10px;
+}
+
+#nav-icon span:nth-child(3) {
+	top: 20px;
+}
+
+#nav-icon.open-icon span:nth-child(1) {
+	top: 10px;
+	-webkit-transform: rotate(135deg);
+	-moz-transform: rotate(135deg);
+	-o-transform: rotate(135deg);
+	transform: rotate(135deg);
+}
+
+#nav-icon.open-icon span:nth-child(2) {
+	opacity: 0;
+	left: -60px;
+}
+
+#nav-icon.open-icon span:nth-child(3) {
+	top: 10px;
+	-webkit-transform: rotate(-135deg);
+	-moz-transform: rotate(-135deg);
+	-o-transform: rotate(-135deg);
+	transform: rotate(-135deg);
 }
